--- a/gym-camp/gym-management-system/src/main/resources/templates/allSession.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/allSession.html
@@ -92,7 +92,7 @@
             <div class="card mt-2 mx-auto p-4 bg-light">
                 <div class="card-body bg-light">
                     <div class="container">
-                        <form  th:action="@{/allTrainer/addTrainer}"  method="POST">
+                        <form   method="POST">
                             <div class="controls">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -153,7 +153,7 @@
             <!-- Post preview-->
             <h3 class="card-title">Functional fitness area</h3>
             <br>
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4" >
 
 
                 <div class="col">
@@ -339,6 +339,28 @@
                 </div>
 
             </div>
+        </div>
+    </div>
+</div>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+
+
+    <div class="col">
+        <div class="col" th:each="sessionData :${sessionData}">
+
+            <img th:src="${sessionData.imgUrl}">
+            <div class="card-body">
+
+
+
+                <h5 class="card-title" th:text="${sessionData.sessionName}"></h5>
+                <p class="card-text" th:text="${sessionData.description}"></p>
+            </div>
+            <div class="card-footer">
+                <small class="text-text" th:text="${sessionData.price}"></small>
+            </div>
+<!--            <button> <a th:href="@{/allSession/addSession/{id}(id=${trainer.id})}" >Register to session</a></button>-->
+
         </div>
     </div>
 </div>
