--- a/gym-camp/gym-management-system/src/main/resources/templates/allTrainer.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/allTrainer.html
@@ -64,6 +64,41 @@
         </div> <!-- /.8 -->
     </div> <!-- /.row-->
 </div>
+
+<div class="container px-4 px-lg-5" id="services">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="" >
+            <!-- Post preview-->
+            <hr class="my-4" />
+            <br class="my-4" />
+            <!-- Post preview-->
+            <h3 class="card-title">Functional fitness area</h3>
+            <br>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+
+
+                <div class="col">
+                    <div class="col" th:each="trainer :${trainer}">
+
+                        <img th:src="${trainer.imgUrl}">
+                        <div class="card-body">
+
+
+
+                            <h5 class="card-title" th:text="${trainer.trainerName}"></h5>
+                            <p class="card-text" th:text="${trainer.bio}"></p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-text" th:text="${trainer.specialTraining}"></small>
+                        </div>
+                        <button> <a th:href="@{/allSession/addSession/{id}(id=${trainer.id})}" >Register to session</a></button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
