--- a/gym-camp/gym-management-system/src/main/resources/templates/login.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/login.html
@@ -6,22 +6,42 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login page</title>
+    <link rel="stylesheet" href="./signUp.css" >
 </head>
 <body>
+<div class="login-html">
 <form action="perform_login" method="POST">
-    <fieldset>
-        <label for="username">User Name:  <input type="text" name="username" id="username"> </label>
-        <br>
-        <label for="password">Password:  <input type="password" name="password" id="password"> </label>
-        <br>
-        <button type="submit">login</button>
-        <button></button><a href="/signup"> signup</a>
+
+        <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
+        <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab"></label>
+
+    <div class="login-form">
+            <div class="sign-in-htm">
+                <div class="group">
+                    <label for="username">User Name:  <input type="text" name="username" id="username"> </label>
+
+                </div>
+                <div class="group">
+                    <label for="password">Password:  <input type="password" name="password" id="password"> </label>
+                </div>
+
+                <div class="group">
+                    <input type="submit" class="button" value="Sign In">
+
+
+
+                </div>
 
 
 
 
-    </fieldset>
-</form>
+            </div>
+
+        </div>
+    </form>
+    <span type="submit" class="button" value="Sign Up"><a href="/signup"> signup</a></span>
+
+</div>
 
 </body>
 </html>
