--- a/gym-camp/gym-management-system/src/main/resources/templates/profile.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/profile.html
@@ -88,8 +88,8 @@
             <div class="col-sm-4 bg-c-lite-green user-profile">
               <div class="card-block text-center text-white">
                 <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
-                <h6 class="f-w-600" th:text="${user.username}">Hembo Tingor</h6>
-                <p th:text="${user.dob}">Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                <h6 class="f-w-600" th:text="${profile.username}">Hembo Tingor</h6>
+                <p th:text="${profile.dob}">Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
               </div>
             </div>
             <div class="col-sm-8">
@@ -98,16 +98,16 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <p class="m-b-10 f-w-600">first name</p>
-                    <h6 class="text-muted f-w-400" th:text="${user.firstName}">rntng@gmail.com</h6>
+                    <h6 class="text-muted f-w-400" th:text="${profile.firstName}">rntng@gmail.com</h6>
                   </div>
                   <div class="col-sm-6">
                     <p class="m-b-10 f-w-600">last name</p>
-                    <h6 class="text-muted f-w-400" th:text="${user.lastName}">98979989898</h6>
+                    <h6 class="text-muted f-w-400" th:text="${profile.lastName}">98979989898</h6>
                   </div>
                 </div>
                 <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Bio</h6>
                 <div class="row">
-                  <p th:text="${user.bio}">
+<!--                  <p th:text="${profile.bio}">-->
                 </div>
               </div>
             </div>
