--- a/gym-camp/gym-management-system/src/main/resources/templates/session.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/session.html
@@ -1,30 +1,173 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-    <!--    <link rel="stylesheet" href="./css/style.css" >-->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Clean Blog - Start Bootstrap Theme</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+
 
 </head>
-<body background-image>
-<h1>SONGR </h1>
-<h3>THE PLACE WHERE</h3>
-<h2>ALBUMS</h2>
-<h3>GANG UP ON</h3>
-<a href="/"> home</a>
-<a href="/session"> session</a>
-<a href="/aboutUs"> about us</a>
-<a href="/contactUs"> contact us</a>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            Bootstrap
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav m-auto ">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+
+
+                <a class="nav-link active"  href="/allSession">Session</a>
+
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="/allTrainer">Trainer</a>
+                </li>
+                <li class="nav-item">
+
+
+                <li class="nav-item">
+
+                    <a class="nav-link active"  href="/profile">My Profile</a>
+
+                </li>
+
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link active nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Log In
+                    </a>
+
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="/login">Log In</a></li>
+                        <li>
+                            <form th:action="perform_logout" method="post"  name="logoutForm">
+                                <input type="submit" value="Logout" />
+                            </form>
+                        </li>
+
+                    </ul>
+                </li>
+
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
+<!-- Page Header-->
+
+<hr class="my-4" />
+<br class="my-4" />
+<hr class="my-4" />
+<br class="my-4" />
+
+<div class="row ">
+    <div class="col-lg-7 mx-auto">
+        <div class="card mt-2 mx-auto p-4 bg-light">
+            <div class="card-body bg-light" >
+                <div class="container"  >
 
 
 
+                    <form  method="POST">
+                        <div class="controls">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group"> <label for="traineeName">Trainee Name : </label> <input id="traineeName" type="text" name="traineeName" class="form-control" placeholder=" trainee name " required="required" data-error="name is required."> </div>
+                                </div>
 
-<button  onclick="location.href='/albums'">CHECK OUR  <br>HIT ALBUMS</button>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group"> <label for="email">Email : *</label> <input id="email" type="email" name="email" class="form-control" placeholder="email  *" required="required" data-error="Valid email is required."> </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group"> <label for="dob">Day Of Birth Start*</label> <input id="dob" type="date" name="dob" class="form-control" required="required" data-error="Please, leave a description"> </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="col-md-12">
+                                    <div class="form-group"> <label for="subscriptionStart">Subscription Start*</label> <input id="subscriptionStart" type="date" name="subscriptionStart" class="form-control" required="required" data-error="Please, leave a description"> </div>
+                                    <div class="form-group"> <label for="endOFSubscription">Subscription End*</label> <input id="endOFSubscription" type="date" name="endOFSubscription" class="form-control"   required="required" data-error="Please, leave a description"> </div>
+
+                                </div>
 
 
+                            </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group"> <label for="bio">Bio *</label> <textarea id="bio" name="bio" class="form-control" placeholder="Write Trainer Bio Here." rows="4" required="required" data-error="Please, leave a description"></textarea> </div>
+                                </div>
+                                <div class="col-md-12"> <input type="submit" class="btn btn-success btn-send pt-2 btn-block " value="Add Trainee"> </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div> <!-- /.8 -->
+    </div> <!-- /.row-->
+</div>
+
+<div class="container px-4 px-lg-5" >
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col" th:each="sessionInfo :${sessionInfo}">
+            <!-- Post preview-->
+            <hr class="my-4" />
+            <br class="my-4" />
+            <br>
+            <div class="row row-cols-1 row-cols-md-2 g-4" >
+
+
+                <div class="col">
+                    <div class="card">
+                        <img th:src="${sessionInfo.imgUrl}">
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${sessionInfo.sessionName}"></h5>
+                            <p class="card-text" th:text="${sessionInfo.capacity}"></p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-text" th:text="${sessionInfo.price}"></small>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+            <button> <a th:href="@{/allTrainee/addTrainee/{id}(id=${sessionInfo.id})}" >Register to session</a></button>
+            <form action="#" th:action="@{/allTrainer/deleteTrainer/{id}(id=${sessionInfo.id})}" th:method="Delete" >
+                <button type="submit" class="btn">Delete</button>
+            </form>
+
+        </div>
+
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
 </html>
