--- a/gym-camp/gym-management-system/src/main/resources/templates/session.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/session.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Clean Blog - Start Bootstrap Theme</title>
+    <title>Session Details</title>
+    <link  href="./table.css" >
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -16,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Carter+One&display=swap" rel="stylesheet">
+
 
 
 </head>
@@ -106,19 +109,19 @@
                                 <div class="col-md-6">
                                     <div class="form-group"> <label for="email">Email : *</label> <input id="email" type="email" name="email" class="form-control" placeholder="email  *" required="required" data-error="Valid email is required."> </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="form-group"> <label for="dob">Day Of Birth Start*</label> <input id="dob" type="date" name="dob" class="form-control" required="required" data-error="Please, leave a description"> </div>
-                                </div>
+<!--                                <div class="col-md-6">-->
+<!--                                    <div class="form-group"> <label for="dob">Day Of Birth Start*</label> <input id="dob" type="date" name="dob" class="form-control" required="required" data-error="Please, leave a description"> </div>-->
+<!--                                </div>-->
                             </div>
-                            <div class="col-md-6">
-                                <div class="col-md-12">
-                                    <div class="form-group"> <label for="subscriptionStart">Subscription Start*</label> <input id="subscriptionStart" type="date" name="subscriptionStart" class="form-control" required="required" data-error="Please, leave a description"> </div>
-                                    <div class="form-group"> <label for="endOFSubscription">Subscription End*</label> <input id="endOFSubscription" type="date" name="endOFSubscription" class="form-control"   required="required" data-error="Please, leave a description"> </div>
+<!--                            <div class="col-md-6">-->
+<!--                                <div class="col-md-12">-->
+<!--                                    <div class="form-group"> <label for="subscriptionStart">Subscription Start*</label> <input id="subscriptionStart" type="date" name="subscriptionStart" class="form-control" required="required" data-error="Please, leave a description"> </div>-->
+<!--                                    <div class="form-group"> <label for="endOFSubscription">Subscription End*</label> <input id="endOFSubscription" type="date" name="endOFSubscription" class="form-control"   required="required" data-error="Please, leave a description"> </div>-->
 
-                                </div>
+<!--                                </div>-->
 
 
-                            </div>
+<!--                            </div>-->
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group"> <label for="bio">Bio *</label> <textarea id="bio" name="bio" class="form-control" placeholder="Write Trainer Bio Here." rows="4" required="required" data-error="Please, leave a description"></textarea> </div>
@@ -131,6 +134,106 @@
             </div>
         </div> <!-- /.8 -->
     </div> <!-- /.row-->
+</div>
+<div th:each="allTrainee :${allTrainee}">
+    <h5 th:text="${allTrainee.traineeName}"></h5>
+    <h5></h5>
+    <h5></h5>
+    <h5></h5>
+
+</div>
+<div class="table">
+
+    <div class="row header green">
+        <div class="cell">
+            Product
+        </div>
+        <div class="cell">
+            Unit Price
+        </div>
+        <div class="cell">
+            Quantity
+        </div>
+        <div class="cell">
+            Date Sold
+        </div>
+        <div class="cell">
+            Status
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="cell" data-title="Product">
+            Solid oak work table
+        </div>
+        <div class="cell" data-title="Unit Price">
+            $800
+        </div>
+        <div class="cell" data-title="Quantity">
+            10
+        </div>
+        <div class="cell" data-title="Date Sold">
+            03/15/2014
+        </div>
+        <div class="cell" data-title="Status">
+            Waiting for Pickup
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="cell" data-title="Product">
+            Leather iPhone wallet
+        </div>
+        <div class="cell" data-title="Unit Price">
+            $45
+        </div>
+        <div class="cell" data-title="Quantity">
+            120
+        </div>
+        <div class="cell" data-title="Date Sold">
+            02/28/2014
+        </div>
+        <div class="cell" data-title="Status">
+            In Transit
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="cell" data-title="Product">
+            27" Apple Thunderbolt displays
+        </div>
+        <div class="cell" data-title="Unit Price">
+            $1000
+        </div>
+        <div class="cell" data-title="Quantity">
+            25
+        </div>
+        <div class="cell" data-title="Date Sold">
+            02/10/2014
+        </div>
+        <div class="cell" data-title="Status">
+            Delivered
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="cell" data-title="Product">
+            Bose studio headphones
+        </div>
+        <div class="cell" data-title="Unit Price">
+            $60
+        </div>
+        <div class="cell" data-title="Quantity">
+            90
+        </div>
+        <div class="cell" data-title="Date Sold">
+            01/14/2014
+        </div>
+        <div class="cell" data-title="Status">
+            Delivered
+        </div>
+    </div>
+
 </div>
 
 <div class="container px-4 px-lg-5" >
