fixing delete method

--- a/gym-camp/gym-management-system/src/main/resources/templates/allTrainer.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/allTrainer.html
@@ -157,7 +157,7 @@
 
 
         </div>
-        <button> <a th:href="@{/allSession/addSession/{id}(id=${trainer.id})}" >Register to session</a></button>
+<!--        <button> <a th:href="@{/allSession/addSession/{id}(id=${trainer.id})}" >Register to session</a></button>-->
         <form action="#" th:action="@{/allTrainer/deleteTrainer/{id}(id=${trainer.id})}" th:method="Delete" >
             <button type="submit" class="btn">Delete</button>
         </form>
