fixed delete method

--- a/gym-camp/gym-management-system/src/main/resources/templates/error.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/error.html
@@ -9,6 +9,120 @@
 </head>
 <body>
 <P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Erro<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>rrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P></P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P><P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
+<P>Errorrrrrrrrrr</P>
 
 </body>
 </html>
