fixing trainee controller and client side

--- a/gym-camp/gym-management-system/src/main/resources/templates/index.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/index.html
@@ -45,9 +45,7 @@
 
 
                 <li class="nav-item">
-
-                    <a class="nav-link active"  href="/profile">My Profile</a>
-
+                    <a class="nav-link active" href="/allTrainee">Trainee</a>
                 </li>
 
 
