--- a/gym-camp/gym-management-system/src/main/resources/templates/allSession.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/allSession.html
@@ -49,9 +49,7 @@
 
 
                 <li class="nav-item">
-
-                    <a class="nav-link active"  href="/profile">My Profile</a>
-
+                    <a class="nav-link active" href="/allTrainee">Trainee</a>
                 </li>
 
 
@@ -88,9 +86,7 @@
 </header>
 
 <div class="container">
-    <div class=" text-center mt-5 ">
-    <h1>Session Form</h1>
-    </div>
+
     <div class="row ">
         <div class="col-lg-7 mx-auto">
             <div class="card mt-2 mx-auto p-4 bg-light">
