fixing relations and its operation

--- a/gym-camp/gym-management-system/src/main/resources/templates/allTrainee.html
+++ b/gym-camp/gym-management-system/src/main/resources/templates/allTrainee.html
@@ -139,6 +139,10 @@
         <button type="submit" class="btn">Delete</button>
       </form>
 
+      <form action="#" th:action="@{/allSession/regForSession/{id}(id=${trainee.id})}" th:method="Get" >
+        <button type="submit" class="btn">Register a session</button>
+      </form>
+
     </div>
 
   </div>
